Fix overflow issue in main window section

--- a/client/app/play/play.styl
+++ b/client/app/play/play.styl
@@ -4,6 +4,7 @@ section.top, div.top
 
 section.main, div.main
   height 90%
+  overflow-y: auto
 
   .message-container
     overflow hidden
